# loom

./: .gitattributes  .gitignore  DEFINITION.md  LICENSING.md  README.md  antenna_resolver.py  app_paths.py  bookmark.py  booth.py  club_gate.py  colorist.py  conftest.py  descriptor_club_gate.py  export_oradio.py  freesound.py  llm_client.py  loom.spec  loom_booth.py  loom_narration.py  loom_player_ui.py  loom_serve.py  oradio_player.py  oradio_player_ui.py  oradio_resolver.py  oradio_tape_synth.py  oradio_validate.py  provisioning.py  pyproject.toml  pytest.ini  radio_os_theme.py  ribbon_bridge.py  ribbon_os_shell.py  sampler.py  sfx_sourcing.py  shim_generator.py  show_the_machine.py  signal_heat.py  speech_out.py  stonehenge.loom  voice_provider.py  (+1 more)
archive/: README.md  oradio_runtime.py
assets/: README.md  basketball_loop.ogv
bench/: README.md  _bake_tutorial.py  baseline.py  build_dataset.py  build_tutorial_loom.py  encode.py  score.py
bookmark/: ONBOARDING_BRICKS.md  __init__.py  brick_kernel.py  canvas.py  club_manager.py  door.py  draft.py  identity.py  launch.py  manifest.py  mint.py  palette.py  transitions.py
data/: f1_barcelona_2026.json  f1_causal_rules.json  finals_pbp_401859967.json  lexicon_demo.json  lexicon_f1.json  rss_f1news.json
docs/: ANDROID.md  ARCHITECTURE.md  BENCHMARK.md  BROADCAST_GRAMMAR.md  CANON.md  CANON_REPO_TOPOLOGY.md  CONVERGENCE.md  LOOM_ORADIO_ARCHITECTURE.md  MILESTONE4_VISUAL_TAPE_SPEC.md  ORADIO_FORMAT.md  ORADIO_SCHEMA_V2.md  ORGAN_CATALOG.md  PLAN_loom_headline_then_narration.md  PROJECT_CONSTELLATION.md  REPO_MIGRATION.md  RIBBONOS.md  SIMULATION_ENGINE.md  SOUND.md  TAPES.md  THE_LOOM.md  booth-v2.html  booth.html  dbooth.html  decoder.html  index.html  ncm.html  synth.html
examples/: home-region.oradio  me.oradio
exports/: kernel.oradio  milestone4-proof.oradio
huggingface/: README.md
loom/: __init__.py  app.py  app2.py  broadcast_grammar.py  dotloom.py  export_oradio.py  loom_studio.py  radio_os_studio.py
oradio_engine/: __init__.py  __main__.py  antenna.py  binding.py  bootstrap.py  club.py  club_packages.py  contract.py  descriptor.py  detect.py  dipole.py  evidence.py  federation.py  index.py  inquiry.py  lens.py  live.py  loader.py  loom_graph.py  loom_runtime.py  mix.py  observation.py  plugins.py  registry.py  speech.py  thread.py  visual_index.py  visual_tape.py  visual_thumbnail.py
tests/: test_antenna.py  test_atl_shim.py  test_basketball_shim.py  test_binding.py  test_booth.py  test_brick_canvas_config.py  test_broadcast_grammar.py  test_club_and_open.py  test_club_assets.py  test_club_manager.py  test_club_packages.py  test_club_surface.py  test_colorist.py  test_crossover_custom.py  test_descriptor_runtime.py  test_detect.py  test_dipole.py  test_dotloom.py  test_engine_purity.py  test_evidence.py  test_f1_tape.py  test_forkuniverse_shim.py  test_ftb_shim.py  test_index.py  test_inquiry.py  test_live_organ.py  test_loom_app.py  test_loom_app2.py  test_loom_narration.py  test_loom_player_soundtrack.py  test_loom_runtime.py  test_loom_studio.py  test_loom_switching.py  test_mix.py  test_moco_shim.py  test_neikos_shim.py  test_observation.py  test_open_resolver.py  test_oracle_shim.py  test_oradio_contract.py  (+15 more)
tools/: author.py  autocommit.ps1  bake_f1.py  empower.py  (+11 more)
(+688 files in other folders)
